--- a/style.css
+++ b/style.css
@@ -8,10 +8,7 @@ body {
     min-height: 100vh;
     font-family: "Inter", sans-serif;
     color: #E5E7EB;
-    background-color: #121826;
-    background-image: url(resources/blur-radial.png);
-    background-position: 500px 100px;
-    background-repeat: no-repeat;
+    background: #121826 url(resources/blur-radial.png) no-repeat 30% 30%;
 }
 
 .container {
